# soylent_army

./: .gitignore  soylent-division-steps.md  soylent_pink.ipynb
agent_orange/: README.md  create_index.py  extract_cloudscape.py  integrate_highcharts.py  pyproject.toml
agent_orange/knowledge/: user_preference.txt
agent_orange/raw_materials/components/: Alert - Cloudscape Design System (7_7_2025 11：02：53 AM).html  Anchor navigation - Cloudscape Design System (7_7_2025 11：02：20 AM).html  App layout - Cloudscape Design System (7_7_2025 11：02：03 AM).html  App layout toolbar - Cloudscape Design System (7_7_2025 11：02：16 AM).html  Attribute editor - Cloudscape Design System (7_7_2025 11：01：41 AM).html  Autosuggest - Cloudscape Design System (7_7_2025 11：02：03 AM).html  Badge - Cloudscape Design System (7_7_2025 11：02：03 AM).html  Board components - Cloudscape Design System (7_7_2025 11：02：02 AM).html  Box - Cloudscape Design System (7_7_2025 11：02：47 AM).html  Breadcrumb group - Cloudscape Design System (7_7_2025 11：02：20 AM).html  Button - Cloudscape Design System (7_7_2025 11：01：41 AM).html  Button dropdown - Cloudscape Design System (7_7_2025 11：02：54 AM).html  Button group - Cloudscape Design System (7_7_2025 11：03：11 AM).html  Calendar - Cloudscape Design System (7_7_2025 11：02：03 AM).html  Cards - Cloudscape Design System (7_7_2025 11：02：03 AM).html  Charts - Cloudscape Design System (7_7_2025 11：02：46 AM).html  Checkbox - Cloudscape Design System (7_7_2025 11：03：05 AM).html  Code editor - Cloudscape Design System (7_7_2025 11：01：41 AM).html  Code view - Cloudscape Design System (7_7_2025 11：03：11 AM).html  Collection preferences - Cloudscape Design System (7_7_2025 11：02：20 AM).html  Collection select filter - Cloudscape Design System (7_7_2025 11：02：16 AM).html  Column layout - Cloudscape Design System (7_7_2025 11：02：47 AM).html  Components overview - Cloudscape Design System (7_7_2025 11：00：38 AM).html  Components overview - Cloudscape Design System (7_7_2025 11：00：53 AM).html  Components overview - Cloudscape Design System (7_7_2025 11：01：40 AM).html  Container - Cloudscape Design System (7_7_2025 11：04：05 AM).html  Content layout - Cloudscape Design System (7_7_2025 11：03：05 AM).html  Date input - Cloudscape Design System (7_7_2025 11：04：05 AM).html  Date picker - Cloudscape Design System (7_7_2025 11：02：47 AM).html  Date range picker - Cloudscape Design System (7_7_2025 11：01：41 AM).html  Drawer - Cloudscape Design System (7_7_2025 11：03：12 AM).html  Expandable section - Cloudscape Design System (7_7_2025 11：02：20 AM).html  File uploading components - Cloudscape Design System (7_7_2025 11：02：45 AM).html  Flashbar - Cloudscape Design System (7_7_2025 11：03：57 AM).html  Form - Cloudscape Design System (7_7_2025 11：02：20 AM).html  Form field - Cloudscape Design System (7_7_2025 11：01：41 AM).html  Generative AI components - Cloudscape Design System (7_7_2025 11：01：39 AM).html  Grid - Cloudscape Design System (7_7_2025 11：03：11 AM).html  Header - Cloudscape Design System (7_7_2025 11：02：51 AM).html  Help panel - Cloudscape Design System (7_7_2025 11：01：41 AM).html  (+37 more)
agent_orange/raw_materials/demos/: Cloudscape Demos - Card view (6_30_2025 1：20：15 PM).html  Cloudscape Demos - Chat (6_30_2025 1：20：15 PM).html  (+31 more)
agent_orange/refined_materials/: CLOUDSCAPE_INDEX.md  cloudscape_reskinning_strategy.md
soylent_green/: README.md  pyproject.toml
soylent_red/: AI_Coding_Challenges_Research_Report.md  AI_Tools_for_UX_Designers.md  AI_UX_Integration_Research_Report.md  AI_UX_Research_Report.md  AI_integration_in_UX_design_report.md  README.md  ai_script_reflection_full_with_appendix.md  feedback_collection_package.md  final_article.md  pyproject.toml
soylent_red/ignore/: articles.yaml  final_article_01.md  manifest.yaml  research_report_count_that_couldnt_01.md
soylent_red/knowledge/: audience.md  brand.md  brand_materials.yaml  publication.md
soylent_red/supplies/: final_article.md  import os.py  manifest.yaml
soylent_red_division/: CLAUDE_GUIDANCE.md  Makefile  README.md  pyproject.toml
soylent_red_division/knowledge/: user_preference.txt
soylent_red_division/knowledge_cache/: knowledge_index.json
soylent_red_division/tests/: README.md  conftest.py  requirements.txt  test_core_functionality.py  test_crew_and_tools.py  test_end_to_end.py  test_integration.py  test_knowledge_manager.py  test_memory_manager.py  test_reasoning_engine.py  test_validation_engine.py
soylent_yellow/: README.md  pyproject.toml
test_ux_suite/: README.md  pyproject.toml
test_ux_suite/ux_research_suite/: README.md  pyproject.toml
tools/: README.md  __init__.py
(+192 files in other folders)
