[project]
name = "soylent_green"
version = "0.1.0"
description = "soylent-green using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
soylent_green = "soylent_green.main:run"
run_crew = "soylent_green.main:run"
train = "soylent_green.main:train"
replay = "soylent_green.main:replay"
test = "soylent_green.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
