[project]
name = "soylent_red"
version = "0.1.0"
description = "soylent_red using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
    "crewai-tools",
    "requests",
    "beautifulsoup4"
]

[project.scripts]
soylent_red = "soylent_red.main:run"
run_crew = "soylent_red.main:run"
train = "soylent_red.main:train"
replay = "soylent_red.main:replay"
test = "soylent_red.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
