[project]
name = "soylent_yellow"
version = "0.1.0"
description = "soylent-yellow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
soylent_yellow = "soylent_yellow.main:run"
run_crew = "soylent_yellow.main:run"
train = "soylent_yellow.main:train"
replay = "soylent_yellow.main:replay"
test = "soylent_yellow.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
