[project]
name = "test_ux_suite"
version = "0.1.0"
description = "test-ux-suite using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
test_ux_suite = "test_ux_suite.main:run"
run_crew = "test_ux_suite.main:run"
train = "test_ux_suite.main:train"
replay = "test_ux_suite.main:replay"
test = "test_ux_suite.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
