[project]
name = "ux_research_suite"
version = "0.1.0"
description = "ux-research-suite using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
ux_research_suite = "ux_research_suite.main:run"
run_crew = "ux_research_suite.main:run"
train = "ux_research_suite.main:train"
replay = "ux_research_suite.main:replay"
test = "ux_research_suite.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
